use bouncy castle's Base64 encoder/decoder